Fix tooltip visibility issue
Investigate why tooltips are not showing despite hover detection working.

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,6 @@
   }
 
   html, body {
-    overflow: hidden;
     width: 100%;
     height: 100%;
     margin: 0;
